--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Prueba Git CPanel</title>
 </head>
 <body>
-    <h1>Esta es una prueba para uso de Git en CPanel.</h1>
+    <h1>Despliegue en Neubox</h1>
+
+    <p>Esta es una prueba de despliegue de pagina web usando github y cpanel.</p>
 </body>
 </html>
