--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Despliegue en Neubox</h1>
 
     <p>Esta es una prueba de despliegue de pagina web usando github y cpanel.</p>
+
+    <p>Se agrega archivo yaml</p>
 </body>
 </html>
